# project0

./: .gitignore  LICENSE  Makefile  Makefile.am  Makefile.in  README.md  app  clean  config.h  config.status  configure.ac  configure~  log
autom4te.cache/: output.0  output.2  requests  traces.0  traces.2
shaders/: fLight.shader  fSimple.shader  vLight.shader  vSimple.shader
src/: BoxCollider.cpp  BoxCollider.h  Camera.cpp  Camera.h  Game.cpp  Game.h  Light.cpp  Light.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Object.cpp  Object.h  PointLight.cpp  PointLight.h  Shader.cpp  Shader.h  SpotLight.cpp  SpotLight.h  Text.cpp  Text.h  TickTimer.cpp  TickTimer.h  glfwCallbacks.h  main.cpp
src/.deps/: BoxCollider.Po  Camera.Po  Game.Po  Light.Po  Mesh.Po  Model.Po  Object.Po  PointLight.Po  Shader.Po  SpotLight.Po  Text.Po  TickTimer.Po  main.Po  main.Tpo  stb_image.Po
